[gd_scene load_steps=3 format=2]

[ext_resource path="res://HUD/kenneyUI-green.tres" type="Theme" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5

[node name="HighscoreLabel" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 36.0
text = "High Score = 1000"
align = 1

[node name="RunscoreLabel" type="Label" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 720.0
margin_bottom = 76.0
text = "Current Score = 500"
align = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 720.0
margin_bottom = 140.251
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 720.0
margin_bottom = 204.251
text = "Quit"
